--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <!-- our soon to be beautiful rainbow! -->
     <div> <!-- the grandest grandparent div -->
       <div id ="red">
-        <div>
-          <div>
-            <div>
+        <div id="orange">
+          <div id="yellow">
+            <div id="green">
               <div>
                 <div></div> <!-- the grandest child div -->
               </div>
