--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
         <div id="orange">
           <div id="yellow">
             <div id="green">
-              <div>
-                <div></div> <!-- the grandest child div -->
+              <div id="blue">
+                <div id="indigo">
+                  <div id="violet">
+                  </div>
+                </div> <!-- the grandest child div -->
               </div>
             </div>
           </div>
